# viscm

./: flake.nix  pyproject.toml  shell.nix
distinct_colours/: __main__.py  gui.py
